# RELbot_ROS2

./: .gitignore  README.txt  brightness_node.cpp  brightness_node.hpp  light_pose_indicator_node.cpp  light_pose_indicator_node.hpp
install/: local_setup.sh  setup.sh
install/RELbot_simulator/share/RELbot_simulator/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/RELbot_simulator/share/RELbot_simulator/cmake/: RELbot_simulatorConfig.cmake
install/RELbot_simulator/share/ament_index/resource_index/package_run_dependencies/: RELbot_simulator
install/cam_imag_pro/lib/cam_imag_pro/: brightness_node  light_pos_indicator_node
install/cam_imag_pro/share/cam_imag_pro/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cam_imag_pro/share/cam_imag_pro/cmake/: cam_imag_proConfig.cmake
install/setpoints_publisher/lib/setpoints_publisher/: setpoints_publisher
install/setpoints_publisher/share/setpoints_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
sequence_controller/: CMakeLists.txt  package.xml
sequence_controller/include/: sequence_controller.hpp
sequence_controller/launch/: sequence_controller.launch.py
sequence_controller/src/: sequence_controller.cpp
src/RELbot_simulator/: CMakeLists.txt
src/RELbot_simulator/include/: DynamicsSimulation.hpp  RELbot_simulator.hpp
src/RELbot_simulator/src/: DynamicsSimulation.cpp  RELbot_simulator.cpp
src/cam_imag_pro/: CMakeLists.txt  package.xml
src/cam_imag_pro/include/cam_imag_pro/: brightness_node.hpp  light_pos_indicator_node.hpp
src/cam_imag_pro/launch/: brightness_node.launch.py  light_pose.launch.py
src/cam_imag_pro/src/: brightness_node.cpp  light_pos_indicator_node.cpp
src/cam_imag_pro/test/: brightness_node_test.cpp
src/setpoints_publisher/: CMakeLists.txt  package.xml
src/setpoints_publisher/include/setpoints_publisher/: setpoints_publisher.hpp
src/setpoints_publisher/launch/: start_all_nodes.launch.py  start_all_nodes.py
src/setpoints_publisher/src/: setpoints_publisher.cpp
